@@ -1,3 +1,8 @@
+2001-05-11  Robert Graham Merkel  <rgmerk@mira.net>
+
+	* src/scm/report/account-piecharts.scm: add checks for empty
+	data.
+
 2001-05-10  Dave Peticolas  <dave@krondo.com>
 
 	* src/scm/main-window.scm ((gnc:main-window-book-open-handler
